--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./dist/index.9f180349.css">
+    <link rel="stylesheet" href="./public/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cloud-letter</title>
   </head>
@@ -14,6 +14,6 @@
     <div id="root"></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script src="./dist/index.a687d0fc.js"></script>
+    <script src="./public/bundle.js"></script>
   </body>
 </html>
