--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="./public/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cloud-letter</title>
+    <title>react-cloud-letter</title>
   </head>
   <body>
     <div id="root"></div>
